# google-hash-code-2020

./: README.md
round1/: .editorconfig  .sugoi.target  CMakeLists.txt  check.sh  plot.sh
round1/src/: greedy.cpp  main.cpp  parse.hpp  score.cpp
